malware-jail/muestras/1d97750701c9ff99b14e0347cae605fb737147f0117a7938aafabf9df5521b86/notas
2 Agosto

vodafone_bill -> Muestra de nemucod

bastante cifrado.
La funcion String.ir() es la que se encarga de descifrar los string
En modified.js esta el codigo para descifrar los churros de strings
Los Strings estan en hexadecimal. la funcion ir() simplemente los transforma a ascii


----------------------------------------------------------
+ERROR: function String.prototype.ir(){
               ^
SyntaxError: Unexpected token 

SOLUCION: Cambiar "function String.prototype.ir()" por "String.prototype.ir = function()" y ponerla al principio
----------------------------------------------------------
ERROR: Exception occured: object TypeError: EAyqKvJKoFQ is not a constructor

se soluiona reverseando a mano la muestra
----------------------------------------------------------
